# haircut

./: main.py  pyproject.toml  shops.ipynb  shops.py  view.html
flaskr/: __init__.py  admin.py  auth.py  company.py  data.json  db.py  schema.sql  user.py
flaskr/static/: style.css
flaskr/templates/: _footer.html  _header.html  base-user.html  base.html  index.html
flaskr/templates/admin/: _list.html  index.html  update.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/company/: _sidebar.html  home.html
flaskr/templates/user/: _list.html  _price.html  _reviews.html  _sidebar.html  _team.html  index.html  profile.html  shop.html  workers.html
static/: cover.css
templates/: index.html  main_users.html  registration.html  user.html
templates/static/: style.css
