[tool.poetry]
name = "haircut"
version = "0.1.0"
description = ""
authors = ["alexzigma <tor.trapeczia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
